--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -2,16 +2,28 @@
 export interface Props {
     title: string;
     description?: string;
+    keywords?: string;
 }
 
 import "../styles/global.css";
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description } = Astro.props;
+const { title, description, keywords } = Astro.props;
 
-import { SITE_TITLE, SITE_DESCRIPTION, OG_IMAGE } from "../consts";
+import { SITE_TITLE, SITE_DESCRIPTION, SITE_KEYWORDS, OG_IMAGE } from "../consts";
 ---
+
+<script is:inline src="/scripts/scrollreveal.min.js"></script>
+
+<script>
+    ScrollReveal().reveal('.reveal', {
+        distance: '2rem',
+        origin: 'bottom',
+        opacity: 0,
+        duration:1100,
+    });
+</script>
 
 <!-- Google Tag Manager -->
 <script is:inline>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -20,21 +32,6 @@ import { SITE_TITLE, SITE_DESCRIPTION, OG_IMAGE } from "../consts";
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-WM63TJ4W');</script>
 <!-- End Google Tag Manager -->
-
-<!-- <style>
-    html.sr .reveal {
-        visibility: hidden;
-    }
-
-    .subsets {
-        opacity: 0;
-        visibility: hidden;
-        transform: translate(0%,calc(100% - 2rem));
-        display: none;
-    }
-</style> -->
-
-<script src="../scripts/scrollreveal.min.js"></script>
 
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width" />
@@ -46,7 +43,7 @@ import { SITE_TITLE, SITE_DESCRIPTION, OG_IMAGE } from "../consts";
 <meta name="title" content={title} />
 <meta name="description" content={description} />
 
-<meta name="keywords" content="commercial cleaning, office cleaning, London, services, company, professional, specialist, best, commercial/office cleaning services, London, corporate office buildings, cleaning services, London small offices, cleaning services, London medical and dental offices, cleaning services, London architects offices, cleaning services, London media agencies and designers offices, cleaning services, London legal practices, cleaning services, London technology companies, cleaning services, London financial service companies, cleaning services, London">
+<meta name="keywords" content={keywords}>
 
 <link rel="canonical" href={canonicalURL} />
 
