--- a/src/components/ContactBox.astro
+++ b/src/components/ContactBox.astro
@@ -1,5 +1,5 @@
 ---
-
+import { LONDON_PHONE_NO, LONDON_PHONE_NO_HREF } from "../consts";
 ---
 					
 
@@ -9,9 +9,9 @@
         office@cleannetwork.co.uk
     </a>
     
-    <a href="tel:+44-020-3411-0275" class="tel">
+    <a href={`tel:${LONDON_PHONE_NO_HREF}`} class="tel">
         <span class="icon"></span>
-        London: 020 3411 0275
+        London: {LONDON_PHONE_NO}
     </a>
     
     <!-- <a href="tel:+44-0121-3927529" class="tel">
