--- a/src/layouts/SubpageLayout.astro
+++ b/src/layouts/SubpageLayout.astro
@@ -1,5 +1,5 @@
 ---
-const { title, description } = Astro.props;
+const { title, description, keywords } = Astro.props;
 
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
@@ -7,12 +7,14 @@ import Footer from "../components/Footer.astro";
 import BodyGTM from "../components/BodyGTM.astro";
 
 import "../styles/subpages.css";
+
+import { SITE_KEYWORDS } from "../consts";
 ---
 
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <BaseHead title={`${title} ${String(title).includes('Cleaning') ? "" : "Cleaning"} Service · The Clean Network`} description={description} />
+        <BaseHead title={`${title} ${String(title).includes('Cleaning') ? "" : "Cleaning"} Service · The Clean Network`} description={description} keywords={SITE_KEYWORDS} />
     </head>
     <body>
         <BodyGTM/>
