--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -8,13 +8,13 @@ import ContactSection from "../../components/ContactSection.astro"
 import "../../styles/button-ctnr.css";
 
 
-import { ABOUT_TITLE, ABOUT_DESCRIPTION } from "../../consts";
+import { ABOUT_TITLE, ABOUT_DESCRIPTION, ABOUT_KEYWORDS, ABOUT_H1, ABOUT_H2, ABOUT_TEXT_BODY } from "../../consts";
 
 ---
 
 <html lang="en">
     <head>
-        <BaseHead title={ABOUT_TITLE} description={ABOUT_DESCRIPTION} />
+        <BaseHead title={ABOUT_TITLE} description={ABOUT_DESCRIPTION} keywords={ABOUT_KEYWORDS} />
     </head>
 
     <body>
@@ -24,23 +24,11 @@ import { ABOUT_TITLE, ABOUT_DESCRIPTION } from "../../consts";
             <section class="panel">
                 <div class="ctnr">
                     <div class="content reveal">
-                        <h1>About <strong>The Clean Network</strong></h1>
+                        <h1 set:html={ABOUT_H1}></h1>
     
-                        <h2>The Clean Network – Our Story, Our Values, Our Commitment</h2>
+                        <h2 set:html={ABOUT_H2}></h2>
     
-                        <p>We are one of the leading office <strong>cleaning companies in London</strong>.</p>
-    
-                        <p>The Clean Network is your professional partner for commercial and office cleaning in London. Our story began with a singular mission - to provide businesses with <strong>reliable, high-standard cleaning services, instilling trust through our actions and maintaining a level of quality that speaks for itself.</strong></p>
-    
-                        <p>Our philosophy is simple yet robust - cleanliness and productivity go hand in hand. A clean working environment not only enhances the well-being of your staff but also promotes efficiency, motivation, and a positive corporate image. <b>We have spent years perfecting our services and processes, continuously investing in our team to meet the evolving needs of businesses in London.</b></p>
-    
-                        <p>Today, we are proud to be the trusted choice of over <b>500 offices daily, from small offices to corporate office buildings, legal practices to technology companies, and more.</b> Our cleaning specialists understand the unique needs of each sector, delivering tailored services with meticulous attention to detail and the <b>highest standards</b>.</p>
-    
-                        <p>At The Clean Network, we believe in building strong, long-lasting relationships with our clients. <b>Our 95% contract renewal rate speaks volumes about the trust businesses place in our services and our consistent ability to deliver excellence.</b> We don’t just clean; we care for your workspace as if it were our own, bringing an unwavering commitment to cleanliness and hygiene to your door, every single day.</p>
-
-                        <p>Our team is our strength. Comprising skilled, dedicated professionals passionate about delivering top-tier service, we ensure every member of our team is thoroughly trained and equipped with the latest cleaning technology. As a company, <b>we are committed to providing a positive, supportive work environment where our team can excel</b>, reflecting our commitment to excellence in every task we undertake.</p>
-
-                        <p><strong class="highlight">Partner with us and discover the difference The Clean Network can make.</strong></p>
+                        <div class="body" set:html={ABOUT_TEXT_BODY}></div>
 
                         <div class="bt_ctnr flex">
                             <div class="ctas flex">
@@ -112,6 +100,12 @@ import { ABOUT_TITLE, ABOUT_DESCRIPTION } from "../../consts";
         display: block;
         font-size: clamp(1.5rem,3.8vmin,1.8rem);
         color: var(--grey);
+    }
+
+    section .content .body {
+        display: flex;
+        flex-direction: column;
+        gap: clamp(1rem,2vmin,1.2rem);
     }
 
     h1 {
