--- a/src/styles/posts.css
+++ b/src/styles/posts.css
@@ -57,11 +57,11 @@
     -moz-transition: background-color 0.4s ease;
     -ms-transition: background-color 0.4s ease;
     -o-transition: background-color 0.4s ease;
-    background-color: rgb(248 248 255 / 80%);
-    color: var(--dark-a);
+    color: var(--primary-a);
 }
 
 .intro .back:hover {
+    color: var(--grey);
     background-color: var(--light);
     transition: background-color 0.1s ease;
     -webkit-transition: background-color 0.1s ease;
@@ -131,7 +131,7 @@ article a.back {
     margin-top: 1.5rem;
     color: var(--primary-a);
     font-size: clamp(1.5rem,4vmin,1.8rem);
-    font-weight: 509;
+    font-weight: 500;
     text-align: center;
     width: fit-content;
     margin-inline: auto;
