--- a/src/styles/subpages.css
+++ b/src/styles/subpages.css
@@ -48,7 +48,7 @@ h2::after {
 }
  
 .panel .content .description {
-    font-size: clamp(1.5rem,3.8vmin,1.9rem);
+    font-size: clamp(1.5rem,3.8vmin,1.8rem);
     color: var(--grey);
     line-height: 1.4;
     margin-bottom: 1rem;
@@ -96,7 +96,7 @@ h2::after {
     justify-content: center;
     align-items: center;
     position: relative;
-    bottom: clamp(0.5rem, 1.5vmin, 0.9rem);
+    bottom: clamp(0.5rem, 1.5vmin, 1rem);
     transition: background-color 0.4s ease;
     -webkit-transition: background-color 0.4s ease;
     -moz-transition: background-color 0.4s ease;
@@ -209,7 +209,6 @@ h2::after {
 
 .heading_ctnr p b, .heading_ctnr p strong {
     font-weight: 600;
-    color: var(--dark-a);
 }
 
 .lowercase {
@@ -242,6 +241,7 @@ h2::after {
         right: 3.5rem;
         left: unset;
         bottom: 2.5rem;
+        box-shadow: inset 0 -1.2rem 2rem -1.8rem #fff, 0 0.8rem 1rem -0.6rem rgb(47 54 60 / 50%);
     }
 
     .panel .quote:hover {
