--- a/src/pages/sectors/index.astro
+++ b/src/pages/sectors/index.astro
@@ -45,7 +45,7 @@ import { SECTORS_TITLE, SECTORS_DESCRIPTION, SECTORS_KEYWORDS, SECTORS_H1, SECTO
         <main>
             <div class="ctnr">
                 <div class="heading_ctnr default_bg">
-                    <div class="content">
+                    <div class="content reveal">
                         <h1 set:html={SECTORS_H1}></h1>
     
                         <p set:html={SECTORS_INTRO_DESCRIPTION}></p>
