--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -44,7 +44,7 @@ import { SERVICES_TITLE, SERVICES_DESCRIPTION, SERVICES_KEYWORDS, SERVICES_H1, S
         <main>
             <div class="ctnr">
                 <div class="heading_ctnr default_bg">
-                    <div class="content">
+                    <div class="content reveal">
                         <h1 set:html={SERVICES_H1}></h1>
     
                         <p set:html={SERVICES_INTRO_DESCRIPTION}></p>
