--- a/src/pages/locations/index.astro
+++ b/src/pages/locations/index.astro
@@ -22,7 +22,7 @@ import { LOCATIONS_TITLE, LOCATIONS_DESCRIPTION, LOCATIONS_KEYWORDS, LOCATIONS_H
 
         <main>
             <div class="heading_ctnr default_bg">
-                <div class="content">
+                <div class="content reveal">
                     <h1 set:html={LOCATIONS_H1}></h1>
     
                     <p set:html={LOCATIONS_INTRO_DESCRIPTION}></p>
