--- a/src/styles/collections.css
+++ b/src/styles/collections.css
@@ -1,6 +1,17 @@
 .panel {
+    border: 0.2rem solid var(--light-a);
     border-radius: 1.2rem;
     background-image: linear-gradient(-30deg,var(--light-a),transparent 62%);
+}
+
+.panel .image:hover {
+    filter: brightness(1.1);
+    -webkit-filter: brightness(1.1);
+    transition: filter 0.2s ease;
+    -webkit-transition: filter 0.2s ease;
+    -moz-transition: filter 0.2s ease;
+    -ms-transition: filter 0.2s ease;
+    -o-transition: filter 0.2s ease;
 }
 
 main > .ctnr {
