--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -18,10 +18,11 @@ import { SITE_TITLE, SITE_DESCRIPTION, SITE_KEYWORDS, OG_IMAGE } from "../consts
 
 <script>
     ScrollReveal().reveal('.reveal', {
-        distance: '2rem',
+        distance: '1rem',
         origin: 'bottom',
         opacity: 0,
-        duration:1100,
+        duration:900,
+        easing: 'ease',
     });
 </script>
 
