--- a/src/styles/button-ctnr.css
+++ b/src/styles/button-ctnr.css
@@ -40,6 +40,7 @@
     padding: 0.5rem;
     transition: opacity 0.4s ease;
     width: fit-content;
+    color: var(--dark-a);
 }
 
 .bt_ctnr .flex.column a:hover {
