--- a/src/styles/subpages.css
+++ b/src/styles/subpages.css
@@ -174,7 +174,7 @@ h2::after {
 }
 
 .heading_ctnr h1 {
-    font-size: clamp(2rem,10vw,5.5rem);
+    font-size: clamp(1rem, 8.5vmin, 6.2rem);
     margin-bottom: 1rem;
     color: var(--primary-a);
     /* max-width: 105rem; */
