--- a/src/pages/sectors/[...slug].astro
+++ b/src/pages/sectors/[...slug].astro
@@ -53,11 +53,11 @@ import { Schema } from "astro-seo-schema"
             image: `${sectors.data.image}`,
             "author": [{
                 "@type": "Organization",
-                "name": "Clean Network"
+                "name": "The Clean Network"
             }],
             "publisher": {
                 "@type": "Organization",
-                "name": "Clean Network",
+                "name": "The Clean Network",
                 "logo": {
                     "@type": "ImageObject",
                     "url": "/logo/tcn-logo-360.png"
