--- a/src/pages/sectors/index.astro
+++ b/src/pages/sectors/index.astro
@@ -96,7 +96,7 @@ import { SECTORS_TITLE, SECTORS_DESCRIPTION, SECTORS_KEYWORDS, SECTORS_H1, SECTO
             item={{
                 "@context": "https://schema.org",
                 "@type": "LocalBusiness",
-                "name": "Clean Network | Sectors",
+                "name": "The Clean Network | Sectors",
                 "image": "/og/social-image.jpg",
                 "@id": currentURL,
                 "url": currentURL,
