--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -144,7 +144,7 @@ import { SERVICES_TITLE, SERVICES_DESCRIPTION, SERVICES_KEYWORDS, SERVICES_H1, S
             item={{
                 "@context": "https://schema.org",
                 "@type": "LocalBusiness",
-                "name": "Clean Network | Services",
+                "name": "The Clean Network | Services",
                 "image": "/og/social-image.jpg",
                 "@id": currentURL,
                 "url": currentURL,
