--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -581,6 +581,65 @@ section.find_us {
 
 .find_us .content {}
 
+.redir_warning {
+    position: fixed;
+    bottom: 3rem;
+    left: 1rem;
+    right: 1rem;
+    width: clamp(10rem, 88vw, 58rem);
+    margin-inline: auto;
+    background-color: var(--light-a);
+    z-index: 4;
+    color: var(--dark-a);
+    text-align: center;
+    padding: 1.2rem 2rem;
+    font-weight: 600;
+    box-sizing: border-box;
+    font-size: 1.7rem;
+    border-radius: 0.8rem;
+    border: 0.3rem solid red;
+    box-shadow: 0 1.5rem 1rem -1rem rgb(0 0 0 / 62%);
+    line-height: 1.3;
+    animation: appear 1.4s ease 1;
+    -webkit-animation: appear 1.4s ease 1;
+    opacity: 0;
+    transform: translateY(2rem);
+    -webkit-transform: translateY(2rem);
+    -moz-transform: translateY(2rem);
+    -ms-transform: translateY(2rem);
+    -o-transform: translateY(2rem);
+    transition: opacity 0.6s ease, transform 0.6s ease;
+    -webkit-transition: opacity 0.6s ease, transform 0.6s ease;
+    -moz-transition: opacity 0.6s ease, transform 0.6s ease;
+    -ms-transition: opacity 0.6s ease, transform 0.6s ease;
+    -o-transition: opacity 0.6s ease, transform 0.6s ease;
+}
+
+.redir_warning.show {
+    opacity: 1;
+    transform: translateY(0rem);
+    -webkit-transform: translateY(0rem);
+    -moz-transform: translateY(0rem);
+    -ms-transform: translateY(0rem);
+    -o-transform: translateY(0rem);
+}
+
+.redir_warning span {
+    color:crimson;
+}
+
+.redir_warning button {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    width: 1.4rem;
+    height: 1.4rem;
+}
+
+
+
+
+
 
 
 @media screen and (min-width: 850px) {
