--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -372,7 +372,7 @@ import { LONDON_PHONE_NO, LONDON_PHONE_NO_HREF } from "../consts";
     }
 
     .subsets > div a {
-        padding: 0.5rem;
+        padding: 0.7rem 0.5rem;
         /* white-space: nowrap; */
         display: block;
         width: 100%;
@@ -502,7 +502,7 @@ import { LONDON_PHONE_NO, LONDON_PHONE_NO_HREF } from "../consts";
             opacity: 1;
             visibility: visible;
             backdrop-filter: unset;
-            font-size: clamp(1.5rem, 3.8vmin, 1.8rem);
+            font-size: clamp(1.5rem, 3.8vmin, 1.9rem);
             box-shadow: unset;
             background-image: unset;
             border: unset;
@@ -608,7 +608,7 @@ import { LONDON_PHONE_NO, LONDON_PHONE_NO_HREF } from "../consts";
 
         .subsets > div a {
             transition: background-color 0.3s ease;
-            max-width: 28rem;
+            max-width: 36rem;
             line-height: 1.3;
         }
 
