--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -38,7 +38,7 @@ const currentURL = new URL(Astro.request.url)
 			item={{
 				"@context": "https://schema.org",
 				"@type": "LocalBusiness",
-				"name": "Clean Network",
+				"name": "The Clean Network",
 				"image": "/og/social-image.jpg",
 				"@id": currentURL,
 				"url": currentURL,
