--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -29,12 +29,14 @@ import "../../styles/collections.css"
 
 import { Schema } from "astro-seo-schema"
 
-import { SERVICES_TITLE, SERVICES_DESCRIPTION, SERVICES_KEYWORDS, SERVICES_H1, SERVICES_INTRO_DESCRIPTION, INTERIOR_SERVICES_DESCRIPTION, EXTERIOR_SERVICES_DESCRIPTION } from "../../consts";
+import { SITE_KEYWORDS, SERVICES_TITLE, SERVICES_DESCRIPTION, SERVICES_KEYWORDS, SERVICES_H1, SERVICES_INTRO_DESCRIPTION, INTERIOR_SERVICES_DESCRIPTION, EXTERIOR_SERVICES_DESCRIPTION } from "../../consts";
 ---
 
 <html lang="en">
     <head>
-        <BaseHead title={SERVICES_TITLE} description={SERVICES_DESCRIPTION} keywords={SERVICES_KEYWORDS} />
+        <BaseHead title={SERVICES_TITLE}
+        description={SERVICES_DESCRIPTION}
+        keywords={SERVICES_KEYWORDS ? SERVICES_KEYWORDS : SITE_KEYWORDS} />
     </head>
 
     <body>
